--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-loader-spinner": "^5.4.5",
+    "swr": "^2.2.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
