--- a/package.json
+++ b/package.json
@@ -21,8 +21,14 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-loader-spinner": "^5.4.5",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "swr": "^2.2.2",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animated": "^1.0.1",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.11"
   }
 }
