--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-loader-spinner": "^5.4.5",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "sharp": "^0.33.2",
     "slick-carousel": "^1.8.1",
     "swr": "^2.2.2",
     "tailwindcss": "3.3.3",
