--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
             sudo docker-compose stop
             sudo docker-compose pull
             sudo env APP_ENV=${{ vars.APP_ENV }} API_HOST=${{ secrets.API_HOST }} TRANSLATE_API_URL=${{ secrets.TRANSLATE_API_URL }} \
-              TRANSLATE_API_KEY=${{ secrets.TRANSLATE_API_KEY }} TRANSLATE_API_HOST=${{ secrets.TRANSLATE_API_HOST }} \
+              TRANSLATE_API_KEY=${{ secrets.TRANSLATE_API_KEY }} TRANSLATE_API_HOST=${{ secrets.TRANSLATE_API_HOST }} \ NEXT_PUBLIC_APP_HOST={{ vars.NEXT_PUBLIC_APP_HOST }} \
               DICTIONARY_API_URL=${{ secrets.DICTIONARY_API_URL }} NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }} NEXTAUTH_URL=${{ vars.NEXTAUTH_URL }} \
               docker-compose up -d
             sudo docker image prune -f
