--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -19,6 +20,7 @@
     "eslint-config-next": "13.4.19",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
+    "next-safe-action": "^7.9.2",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,7 +33,8 @@
     "swr": "^2.2.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animated": "^1.0.1",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
