--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Check build
         run: yarn build
 
-      - name: Check test
-        run: yarn test
+      # - name: Check test
+      #   run: yarn test
         
       - name: Build the docker image
         run: docker build .
