--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,6 @@ jobs:
               GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }} \
               GIT_AUTH_CLIENT_ID=${{ secrets.GIT_AUTH_CLIENT_ID }} GIT_AUTH_CLIENT_SECRET=${{ secrets.GIT_AUTH_CLIENT_SECRET }} \
               OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} LANGCHAIN_API_KEY=${{ secrets.LANGCHAIN_API_KEY }} LANGCHAIN_ENDPOINT=${{ secrets.LANGCHAIN_ENDPOINT }} \
-              LANGCHAIN_TRACING_V2=${{ secrets.LANGCHAIN_TRACING_V2 }} LANGCHAIN_PROJECT=${{ vars.LANGCHAIN_PROJECT }} TAVILY_API_KEY=${{ secrets.TAVILY_API_KEY }} \
+              LANGCHAIN_TRACING_V2=${{ secrets.LANGCHAIN_TRACING_V2 }} LANGCHAIN_PROJECT=${{ secrets.LANGCHAIN_PROJECT }} TAVILY_API_KEY=${{ secrets.TAVILY_API_KEY }} \
               docker-compose up -d
             sudo docker image prune -f
