--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,8 +46,7 @@ jobs:
             cd ~/projects/quizlet-clone-next
             sudo docker-compose stop
             sudo docker-compose pull
-            sudo env APP_ENV=${{ vars.APP_ENV }} API_HOST=${{ secrets.API_HOST }} TRANSLATE_API_URL=${{ secrets.TRANSLATE_API_URL }} \
-              TRANSLATE_API_KEY=${{ secrets.TRANSLATE_API_KEY }} TRANSLATE_API_HOST=${{ secrets.TRANSLATE_API_HOST }} NEXT_PUBLIC_APP_HOST=${{ vars.NEXT_PUBLIC_APP_HOST }} \
+            sudo env APP_ENV=${{ vars.APP_ENV }} API_HOST=${{ secrets.API_HOST }} NEXT_PUBLIC_APP_HOST=${{ vars.NEXT_PUBLIC_APP_HOST }} \
               DICTIONARY_API_URL=${{ secrets.DICTIONARY_API_URL }} NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }} NEXTAUTH_URL=${{ vars.NEXTAUTH_URL }} \
               GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }} \
               GIT_AUTH_CLIENT_ID=${{ secrets.GIT_AUTH_CLIENT_ID }} GIT_AUTH_CLIENT_SECRET=${{ secrets.GIT_AUTH_CLIENT_SECRET }} \
