changed dictionary engine from api to gpt

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
             sudo docker-compose stop
             sudo docker-compose pull
             sudo env APP_ENV=${{ vars.APP_ENV }} API_HOST=${{ secrets.API_HOST }} NEXT_PUBLIC_APP_HOST=${{ vars.NEXT_PUBLIC_APP_HOST }} \
-              DICTIONARY_API_URL=${{ secrets.DICTIONARY_API_URL }} NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }} NEXTAUTH_URL=${{ vars.NEXTAUTH_URL }} \
+              NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }} NEXTAUTH_URL=${{ vars.NEXTAUTH_URL }} \
               GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }} \
               GIT_AUTH_CLIENT_ID=${{ secrets.GIT_AUTH_CLIENT_ID }} GIT_AUTH_CLIENT_SECRET=${{ secrets.GIT_AUTH_CLIENT_SECRET }} \
               OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} LANGCHAIN_API_KEY=${{ secrets.LANGCHAIN_API_KEY }} LANGCHAIN_ENDPOINT=${{ secrets.LANGCHAIN_ENDPOINT }} \
