--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-auth": "^4.24.5",
     "next-safe-action": "^7.9.2",
     "postcss": "8.4.28",
+    "rc-tabs": "^15.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
